# internal/admin/admin/model.go
@@ -1,0 +1,14 @@
+package adminlogin
+
+type MyError struct {
+    Message interface{}
+}
+
+type Login struct{
+	UserName string `json:"username"`
+	Password string `json:"password"`
+}
+
+type ResultTokenDTO struct {
+	Token string `json:"token"`
+}
